--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,9 @@ main.success {
     background: linear-gradient(90deg, #39EE40, #3C961C);
     border: none;
     width: 100%;
-    border-radius: 0.4rem;
+    border-radius: 0.4rem;  
+    font-size: 1rem;
+    font-weight: 700; 
 }
 
 .home-header, .home-image {
@@ -109,7 +111,12 @@ main.success {
 }
 
 .call-to-action-1 { 
+    display: flex;
+    flex-direction: column;
+    /* gap: 1rem; */
+    margin: 2rem;
     text-align: center;
+    margin-block: 2rem;
 }
 
 .call-to-action-button {
@@ -299,8 +306,6 @@ footer {
         margin-block: 0.5em;
         padding: 1rem;
         padding-left: 0.5rem;
-        font-size: 1rem;
-        font-weight: 700; 
     }
     button {
         
@@ -366,7 +371,7 @@ footer {
 .input {
     /* width: 50%; */
     border: none;
-    border-radius: 1em;
+    border-radius: 0.5rem;
     height: 2rem;
     font-size: large;
     padding-inline: 1rem;
@@ -409,7 +414,7 @@ dialog {
     flex-direction: column;
     align-items: center;
     padding: 1rem;
-    margin: 1rem;
+    margin: auto;
     position: absolute;
     top: 10%;
     text-align: center;
