--- a/styles.css
+++ b/styles.css
@@ -435,3 +435,32 @@ dialog {
 .dialog-header-title{
     font-size: medium; font-weight: 700;
 }
+
+.loadingScreen {
+    position: sticky;
+    top: 0;
+    z-index: 5;
+    width: 100%;
+    height: 100vh;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+ 
+  .loadingScreen > h1 img {
+  width: 25px;
+  animation:  rotateForever 2s infinite;
+  }
+  
+  @keyframes rotateForever {
+    from {
+     transform: rotate(360deg);
+    }
+  }
+  
+  .loadingScreen > h1 {
+  font-size: 3rem;
+  font-family: 'Playfair Display', sans-serif;
+  color: var(--dark-green);
+  }
